# autonomous-tabletop-game-master-ml-cv

./: .gitignore  README.md  implementation_plan.md  pyproject.toml
apps/api/: config.py  database.py  main.py  models.py  path_setup.py  requirements.txt  state_store.py  ws_manager.py
apps/api/routes/: bot.py  combat.py  correction.py  game.py  session.py  state.py  vision.py
apps/web/: index.html  nginx.conf  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  index.css  store.ts  types.ts
apps/web/src/components/: BattlePanel.tsx  BoardFeed.tsx  BotPanel.tsx  CombatPrediction.tsx  CorrectionPanel.tsx  EconomyPanel.tsx  EventLog.tsx  PhaseBar.tsx  PhaseControls.tsx  ZonePanel.tsx
apps/web/src/hooks/: useWebSocket.ts
apps/web/src/pages/: GamePage.tsx  SetupPage.tsx
data/map/: pacific_1940_2e.json
docs/product-spec/: non-goals.md  v1-spec.md
docs/rules/: behavioral-spec.md
infra/docker/: Dockerfile.api  docker-compose.yml
modules/bot/: advisor.py
modules/reconciliation/: __init__.py  reconciler.py
modules/vision/: calibration.py  detector.py  zone_mapper.py
scripts/dev/: smoke_test.py  start_dev.ps1
scripts/migration/: init_db.py
