[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ww2-pacific-referee"
version = "1.0.0"
description = "WW2 Pacific 1940 2nd Edition referee-first CV web app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "pillow>=10.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "modules*", "apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
